# agentos

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  arch_plan.md  docker-compose.yml  enhanced.md  goal.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_gateway.py
agentos/actors/: base.py  bootstrap.py  infrastructure.py  review_cache.py  reviewer.py  safety_reviewer.py
agentos/checkpoints/: manager.py
agentos/cli/: main.py
agentos/config/: actor_team.yml  guardrail_policies.yaml  loader.py  providers.yaml  runtime.py  runtime_tuning.yaml  runtime_tuning.yml  settings.py
agentos/config/prompts/: agent_worker.md  bootstrap_pm.md
agentos/dod/: evaluator.py
agentos/execution/: supervisor.py
agentos/governance/: models.py  policy_engine.py
agentos/memory/: broker.py
agentos/messaging/: dragonfly_bus.py  events.py  outbox.py
agentos/provider/: gateway.py
agentos/runtime/: planning_context.py  supervisor.py  team_plan.py  trigger_engine.py
agentos/storage/: database.py  repositories.py  schema.sql
agentos/storage/clients/: __init__.py  dragonfly.py  milvus.py  minio.py  mongodb.py  postgres.py
agentos/tests/: test_core_models.py  test_deployment_contracts.py  test_dod_contract.py  test_execution_git.py  test_messaging_reliability.py  test_packaging.py  test_policy_engine.py  test_provider_gateway.py  test_storage_integration.py
agentos/tests/fixtures/: dod_golden_cases.json
agentos/watchdogs/: runtime_watchdogs.py
agentos_sandbox/ecommerce_project/.agentos/: project.json
docs/: 00_Python_Fundamentals_Glossary.md  01_Config_And_CLI.md  02_Actors.md  03_Governance_And_Execution.md  04_Runtime_Orchestration.md  05_Messaging_Memory_Provider.md  06_Storage_Checkpoints_DoD_Watchdogs.md
examples/: ecommerce_request.md
prompts/: agent_worker.md  bootstrap_pm.md
scripts/: check_guardrail.sh
